# mosaic-platform

./: README.md  setup.sh
images/: build.sh
images/builder/: Dockerfile  build_container_image.sh
images/mosaic/: Dockerfile  build_container_image.sh
images/native/: Dockerfile  build_container_image.sh
lambda-manager/: README.md  deploy.sh
lambda-manager/src/main/java/org/graalvm/argo/lambda_manager/: LambdaManagerController.java
lambda-manager/src/main/java/org/graalvm/argo/lambda_manager/client/: DefaultLambdaManagerClient.java
lambda-manager/src/main/java/org/graalvm/argo/lambda_manager/core/: ArgumentStorage.java  Environment.java  Function.java  Lambda.java  LambdaExecutionMode.java  LambdaManager.java  LambdaType.java  ShutdownHook.java
lambda-manager/src/main/resources/: application.yml
lambda-manager/src/scripts/: environment.sh  start_container.sh  stop_container.sh
lambda-manager/tests/: benchmarks.sh  cleanup.sh  shared.sh
lambda-manager/tests/ab-latency-benchmark/: config.json  test.sh
lambda-manager/tests/ab-mosaic-time-spans-benchmark/: test.sh
lambda-manager/tests/ab-multifunc-mean-latency/: config.json
lambda-manager/tests/ab-multifunc-mean-mosaic-latency/: test.sh
lambda-manager/tests/multifunc/: config.json  test.sh
lambda-manager/tests/socket-server/: config.json
proxies/mosaic-proxy-time-spans/: Cargo.toml
proxies/mosaic-proxy-time-spans/src/: main.rs
proxies/mosaic-proxy/src/: main.rs
proxies/native-proxy/: Cargo.toml
proxies/native-proxy/src/: main.rs
(+22 files in other folders)
