[package]
name = "mosaic-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = "34.0"
wasmtime-wasi = "34.0"
